--- a/CSS/navigationBar.css
+++ b/CSS/navigationBar.css
@@ -21,7 +21,7 @@ rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   }
   .nav-actions-container {
   display: flex;
-  gap: 0.2rem;
+  gap: 0.3rem;
 }
 nav h1 {
   color: var(--brand-primary);
@@ -34,8 +34,9 @@ nav h1 {
   padding: 0.3rem 0.4rem;
   border-radius: 0.4rem;
   border: 1px solid var(--lines-color);
-  font-weight: 400;
   font-size: 0.9rem;
+  font-weight: 450;
+  background-color:white
 }
 .dark-mode-button:hover,
 .favorites-button:hover {
