--- a/CSS/home.css
+++ b/CSS/home.css
@@ -119,8 +119,11 @@
     max-width: 100%;
     max-height: 5rem;
     text-decoration: none;
-    color: black;
 
+  }
+  .topic-link{
+    color: inherit;
+    text-decoration: none;
   }
   .topic-name p {
     margin: 0;
@@ -131,7 +134,6 @@
     white-space: nowrap;
     font-size: 0.8rem;
     font-weight: 500;
-    
     
   }
   
