--- a/css/home.css
+++ b/css/home.css
@@ -85,9 +85,10 @@
     cursor: pointer;
     border-radius: 0.9rem;
     box-shadow: rgba(99, 99, 99, 0.09) 0px 2px 8px 0px;
-    text-decoration: inherit;
+    text-decoration: none;
 
   }
+  
   .topic:hover {
     background-color: #ddd;
     color: #000;
@@ -112,7 +113,7 @@
     align-items: flex-start;
     height: 53%;
     padding: 1rem;
-    
+
   }
   
   .topic-name {
@@ -121,7 +122,7 @@
     text-decoration: none;
 
   }
-  .topic-link{
+  #topic-link{
     color: inherit;
     text-decoration: none;
   }
@@ -134,6 +135,7 @@
     white-space: nowrap;
     font-size: 0.8rem;
     font-weight: 500;
+
     
   }
   
